--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "target": "es5",
     "module": "esnext",
+    "moduleResolution": "Node",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "composite": true,
     "esModuleInterop": true,
@@ -20,7 +21,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "strictBindCallApply": true
   },
   "include": ["src/**/*", "utils/**/*", "stories/**/*"],
   "exclude": ["**/node_modules", "**/.*/"]
