--- a/package.json
+++ b/package.json
@@ -31,10 +31,6 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -57,7 +53,6 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
-    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "cz-customizable": "^6.3.0",
     "eslint": "^7.17.0",
@@ -88,6 +83,7 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
+    "ts-jest": "^26.4.4",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
