--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "sourceMap": true,
     "allowJs": true,
     "checkJs": true,
+    "noImplicitAny": true,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "removeComments": true,
