--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "*": ["./src/*", "*"]
+      "*": ["*", "src/*", "stories/*"]
     },
     "outDir": "./dist",
     "target": "es5",
     "module": "esnext",
     "moduleResolution": "Node",
+    "declaration": true,
     "lib": ["es6", "dom", "es2016", "es2017"],
     "composite": true,
     "esModuleInterop": true,
@@ -25,6 +26,6 @@
     "noFallthroughCasesInSwitch": true,
     "strictBindCallApply": true
   },
-  "include": ["src/**/*", "utils/**/*", "stories/**/*"],
-  "exclude": ["**/node_modules", "**/.*/"]
+  "include": ["src/**/*", "stories/**/*"],
+  "exclude": ["**/node_modules", "**/.*/", "**/*.test.*", "**/*.spec.*"]
 }
